# GitPulse

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt  setup.py  test_contributions.py  test_github.py
.github/workflows/: ci.yml  release.yml
gitpulse/cli/: main.py
gitpulse/core/: codebase.py  contributor.py  contributor_analyzer.py  github.py  repository.py
gitpulse/utils/: exclusions.py  language.py
gitpulse/web/: README.md  app.py  run.py
gitpulse/web/static/: index.html
gitpulse/web/static/css/: style.css
gitpulse/web/static/js/: main.js
tests/unit/: test_codebase.py  test_contributor.py
