[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitpulse"
version = "0.1.0"
description = "A tool for analyzing Git repositories and measuring contributions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "gitpython>=3.1.0",
    "pygments>=2.17.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.scripts]
gitpulse = "gitpulse.cli.main:cli"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
gitpulse = { workspace = true }

[dependency-groups]
dev = [
    "gitpulse",
]
